--- a/pages/test/test.wxss
+++ b/pages/test/test.wxss
@@ -19,3 +19,32 @@ view{
   background: green;
   height: 50px;
 }
+.textview{
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    width: 80%; 
+    display: flex;
+}
+
+.view11{
+  width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  background: red;
+   justify-content: center; 
+  /* align-items: center; */
+}
+.View22{
+  width: 200px;
+  height: 200px;
+  background: green;
+  flex-grow: 1;  
+}
+input{
+
+  width: 200px;
+  height: 50px;
+  border: 2px solid #8c8c8c;
+}
