--- a/pages/sup/sup.wxss
+++ b/pages/sup/sup.wxss
@@ -6,7 +6,6 @@ page{
   width: 100%;
   height: 248rpx;
   background-color: #f3f3f5;
-  /* padding: 16rpx 20rpx 16rpx 20rpx; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -15,7 +14,8 @@ page{
 .vipIcon{
   width: 160rpx;
   height: 200rpx;
-  background-color: orange;
+  display: flex;
+  flex-direction: column;
 }
 .rightView{
   width: 550rpx;
@@ -65,9 +65,8 @@ page{
 }
 .activityIconBG{
     background: #fdb862;
-    width: 50rpx;
-    height: 50rpx;
-    border-radius: 50%;
+    width: 36rpx;
+    height: 36rpx;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,12 +85,12 @@ page{
     margin-left: 6rpx;
 }
 .rightView12{
-  height: 40rpx;
+  height: 36rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  margin-top: 20rpx;
+  margin-top: 15rpx;
 
 }
 .dot{
@@ -101,10 +100,10 @@ page{
   border-radius: 50%;
 }
 .reduce{
-  width: 30rpx;
-  height: 40rpx;
+  width: 36rpx;
+  height: 36rpx;
   border-radius: 4rpx;
-  line-height: 40rpx;
+  line-height: 36rpx;
   text-align: center;
   font-size: 20rpx;
   color: #504028;
@@ -129,4 +128,11 @@ page{
 }
 .outTime{
   margin-left: 8rpx;
+}
+.SupView{
+  width: 74rpx;
+  height: 74rpx;
+}
+.supPrice{
+  padding-left: 40rpx;
 }
